--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
             vel saepe facilis ea quaerat atque quia veritatis. 
             Sed perferendis earum eveniet quis voluptas. Aperiam, aliquam accusamus.</p>
     </div>
+    <ol>
+        <li>git add .</li>
+        <li>git commit -m"list commit"</li>
+        <li>git push</li>
+    </ol>
 </body>
 </html>
