--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
-    <link rel="stylesheet" href="/styles/blogs.css">
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
     <div>
@@ -14,7 +14,7 @@
             Sed perferendis earum eveniet quis voluptas. Aperiam, aliquam accusamus.</p>
     </div>
     <ol>
-        <li>git add .</li>
+        <li class="list">git add .</li>
         <li>git commit -m"list commit"</li>
         <li>git push</li>
     </ol>
